<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/padding_small"
    android:paddingLeft="@dimen/padding_small"
    android:paddingRight="@dimen/padding_small"
    android:paddingTop="@dimen/padding_tiny">


    <android.support.v7.widget.CardView
        android:id="@+id/nav_app"
        style="@style/CardViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:cardBackgroundColor="#689f38">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_adb_white_24dp"
                android:drawablePadding="@dimen/padding_tiny"
                android:gravity="center"
                android:text="@string/hot_app"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/nav_game"
        style="@style/CardViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_weight="1"
        app:cardBackgroundColor="#029ae5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_gamepad_white_24dp"
                android:drawablePadding="@dimen/padding_tiny"
                android:gravity="center"
                android:text="@string/hot_game"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/nav_theme"
        style="@style/CardViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_weight="1"
        app:cardBackgroundColor="#ec3b39">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_loyalty_white_24dp"
                android:drawablePadding="@dimen/padding_tiny"
                android:gravity="center"
                android:text="@string/hot_theme"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>